maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:48: error: expected class or object definition
def tagCaseAdj(x:Int,y:Int):Unit = {
^ShortestPathMaze:70: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^ShortestPathMaze:71: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^ShortestPathMaze:72: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^ShortestPathMaze:73: error: Unmatched closing brace '}' ignored here
}
^